# family-budget-working

./: .babelrc  .env  .env.example  config.py  forms.py  index.html  main.py  package-lock.json  package.json  pytest.ini  requirements.txt  run.py  setup.cfg  test_python.py  translations.py  validators.py  wsgi.py
server/: .env  package.json
server/src/: server.js
server/src/middleware/: auth.js
server/src/models/: Family.js  Transaction.js  User.js
server/src/routes/: app.js  auth.js  transactions.js
src/: App.tsx  server.js
src/components/charts/: BarChart.tsx  PieChart.tsx
src/components/common/: Footer.css  Footer.tsx  Header.css  Header.tsx  LoadingSpinner.css  LoadingSpinner.tsx  Modal.css  Modal.tsx
src/components/dashboard/: BudgetOverview.css  BudgetOverview.tsx  QuickStats.css  QuickStats.tsx  RecentTransactions.css  RecentTransactions.tsx
src/contexts/: AuthContext.tsx  FamilyContext.tsx  ThemeContext.tsx
src/hooks/: useAuth.ts  useFamily.ts  useLocalStorage.ts  useTransactions.ts
src/middleware/: auth.js
src/models/: Transaction.js  User.js
src/pages/: Advice.css  Advice.tsx  Analysis.css  Analysis.tsx  Dashboard.css  Dashboard.tsx  Family.css  Family.tsx  Formulas.css  Formulas.tsx  Operations.css  Operations.tsx  Settings.css  Settings.tsx  Simulator.css  Simulator.tsx
src/routes/: transactions.js
src/styles/: animations.css  components.css  globals.css
src/types/: family.ts  transaction.ts  user.ts
src/utils/: calculations.ts  constants.ts  formatters.ts  validators.ts
tests/: conftest.py  test_forms.py
(+11 files in other folders)
