[metadata]
name = family-finance-app
version = 1.0.0
description = Family Finance Management Web Application
author = Your Name

[tool:pytest]
addopts = -v --tb=short

[coverage:run]
branch = True
source = app

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError